reset: Index.html ; navLink:connect ; rm:font ; fix: Font

--- a/Rezept Fabian.html
+++ b/Rezept Fabian.html
@@ -7,12 +7,6 @@
     <link rel="stylesheet" href="./style-Odilo.css" />
 
     <link rel="icon" href="./img/logo_small.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
   </head>
  
   <body>
@@ -30,7 +24,7 @@
 
             <nav class="nav nav-desktop">
                 <a class="nav-link" href="./index.html">Start</a>
-                <a class="nav-link is-active" href="#">Rezept des Tages</a>
+                <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
                 <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
                 <a class="nav-link" href="./impressum.html">Impressum</a>
             </nav>
@@ -39,7 +33,7 @@
 
         <nav class="nav-drawer" id="mobileMenu" hidden>
             <a class="nav-link" href="./index.html">Start</a>
-            <a class="nav-link is-active" href="#">Rezept des Tages</a>
+            <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
             <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link" href="./impressum.html">Impressum</a>
         </nav>
@@ -56,49 +50,7 @@
             <div class="chip"><span class="chip-icon"><img src="./img/icons/brain-solid.svg" alt="Schwierigkeit"></span><span>Einfach</span></div>
             <div class="chip"><span class="chip-icon"><img src="./img/icons/calendar-alt-regular.svg" alt="Datum"></span><span>08.01.2026</span></div>
         </section>
-<!--    <div class="cooking-time-box">
-      <div>
-        <div class="clock">
-            <img
-            class="cooking-time"
-            src="./img/icons/clock-regular.svg"
-            alt="clock"
-            />
-          <p>120 Min.</p>
-        </div>
-      </div>
-      <div>
-        <div class="clock">
-          <img
-            class="cooking-time"
-            src="./img/icons/brain-solid.svg"
-            alt="level"
-          />
-          <p>Einfach</p>
-        </div>
-      </div>
-      <div>
-        <div class="clock">
-          <img
-            class="cooking-time"
-            src="./img/icons/calendar-alt-regular.svg"
-            alt="clock"
-          />
-          <p>08.01.2025</p>
-        </div>
-      </div>
-    </div> 
-    <div class="singlepixeldiv"></div>
-  
-    <div class="ingredients-bar">
-      <p>Zutaten für</p>
-      <input id="portionInput" type="number" min="1" max="20" value="1" />
-      <button id="portionBtn" type="button">Portionen</button>
-    </div>
-
-    <ul id="ingredientsList" class="ingredients-list"></ul>
-  -->
-
+        
         <section class="ingredients">
          <div class="ingredients-head">
            <div class="portion-controls">
