--- a/Rezept_nasi-goreng.html
+++ b/Rezept_nasi-goreng.html
@@ -22,8 +22,8 @@
             </button>
 
             <nav class="nav nav-desktop">
-                <a class="nav-link" href="./index.html">Start</a>
-                <a class="nav-link is-active" href="#">Rezept des Tages</a>
+                <a class="nav-link" href="./index.html#">Start</a>
+                <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
                 <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
                 <a class="nav-link" href="./impressum.html">Impressum</a>
             </nav>
@@ -31,8 +31,8 @@
         <div class="nav-overlay" id="navOverlay" hidden></div>
 
         <nav class="nav-drawer" id="mobileMenu" hidden>
-            <a class="nav-link" href="./index.html">Start</a>
-            <a class="nav-link is-active" href="#">Rezept des Tages</a>
+            <a class="nav-link" href="./index.html#">Start</a>
+            <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
             <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link" href="./impressum.html">Impressum</a>
         </nav>
@@ -93,7 +93,7 @@
     </main>
     <footer class="site-footer">
         <div class="container footer-inner">
-            <a class="footer-logo" href="./index.html"> <img src="./img/logo.png" alt="Logo"></a>
+            <a class="footer-logo" href="./index.html#"> <img src="./img/logo.png" alt="Logo"></a>
    
             <div class="container social">
             <a class="social-btn fb" href="https://www.facebook.com/">
