--- a/impressum.html
+++ b/impressum.html
@@ -7,12 +7,7 @@
   <link rel="stylesheet" href="./style-Odilo.css" />
 
     <link rel="icon" href="./img/logo_small.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+
   </head>
  
   <body>
@@ -30,7 +25,7 @@
 
             <nav class="nav nav-desktop">
                 <a class="nav-link" href="./index.html">Start</a>
-                <a class="nav-link" href="./index.html">Rezept des Tages</a>
+                <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
                 <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
                 <a class="nav-link is-active" href="./impressum.html">Impressum</a>
             </nav>
@@ -39,25 +34,11 @@
 
         <nav class="nav-drawer" id="mobileMenu" hidden>
             <a class="nav-link" href="./index.html">Start</a>
-            <a class="nav-link" href="./index.html">Rezept des Tages</a>
+            <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
             <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link is-active" href="./impressum.html">Impressum</a>
         </nav>
     </header>
-    <!-- <div class="header">
-      <div>
-        <a href="index.html">
-          <img src="./img/logo.png" alt="Kochwelt Überschrift" />
-        </a>
-      </div>
-
-      <div class="menue">
-        <a href="index.html#Start">Start</a>
-        <a href="index.html#Rezept-des-Tages">Rezept des Tages</a>
-        <a href="index.html#Kontakt">Kontakt</a>
-        <a href="impressum.html">Impressum</a>
-      </div>
-    </div> -->
   <main class="container">
     <h1>Impressum</h1>
 
