--- a/Rezept-Felix.html
+++ b/Rezept-Felix.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apfelstrudel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="Style-Felix.css">
    <link rel="stylesheet" href="./style-Odilo.css" /> 
 
@@ -26,7 +31,7 @@
 
             <nav class="nav nav-desktop">
                 <a class="nav-link" href="./index.html">Start</a>
-                <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
+                <a class="nav-link is-active" href="#">Rezept des Tages</a>
                 <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
                 <a class="nav-link" href="./impressum.html">Impressum</a>
             </nav>
@@ -35,7 +40,7 @@
 
         <nav class="nav-drawer" id="mobileMenu" hidden>
             <a class="nav-link" href="./index.html">Start</a>
-            <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
+            <a class="nav-link is-active" href="#">Rezept des Tages</a>
             <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link" href="./impressum.html">Impressum</a>
         </nav>
@@ -87,14 +92,14 @@
         <div class="HeadlineZubereitung">Zubereitung</div>
 
         <div class="ZubereitungInfo">
-            <div class="ZubereitungPill">
+            <div class="chip">
                 <img class="pill_icon" src="./img/icons/clock-regular.svg">
                 <span>ca. 30 Min.</span>
             </div>
 
-            <div class="ZubereitungPill">
+            <div class="chip">
                 <img class="pill_icon" src="./img/icons/clock-regular.svg">
-                <span>Gesamtzeit ca. 30 Minuten</span>
+                <span>Gesamtzeit ca. 1h</span>
             </div>
         </div>
 
