--- a/Rezept-Felix.html
+++ b/Rezept-Felix.html
@@ -92,14 +92,14 @@
         <div class="HeadlineZubereitung">Zubereitung</div>
 
         <div class="ZubereitungInfo">
-            <div class="ZubereitungPill">
+            <div class="chip">
                 <img class="pill_icon" src="./img/icons/clock-regular.svg">
                 <span>ca. 30 Min.</span>
             </div>
 
-            <div class="ZubereitungPill">
+            <div class="chip">
                 <img class="pill_icon" src="./img/icons/clock-regular.svg">
-                <span>Gesamtzeit ca. 30 Minuten</span>
+                <span>Gesamtzeit ca. 1h</span>
             </div>
         </div>
 
