Impressum font-size fit

--- a/impressum.html
+++ b/impressum.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
   <main class="container">
-    <h1>Impressum</h1>
+    <h1 class="impressum-title">Impressum</h1>
 
     <div class="impressum-text">
       <h2>Angaben gemäß § 5 TMG</h2>
@@ -53,7 +53,7 @@
       E-Mail: Fabianvoneitzen@outlook.com <br />
       Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a>
     </div>
-     <h1>Datenschutzerklärung</h1>
+     <h1 class="impressum-title">Datenschutzerklärung</h1>
 
     <div class="impressum-text">
       <h2>1. Datenschutz auf einen Blick</h2>
