fit: font-size ; feat: card-hover index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <a class="card" href="./Rezept-Felix.html">
               <div class="card-media">
-                <img src="#" alt="Apfelstrudel" />
+                <img src="./alt-wiener-apfelstrudel.jpg" alt="Apfelstrudel" />
               </div>
               <div class="card-caption">Apfelstrudel</div>
             </a>
