--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
       </section>
 
-      <section class="section section-grid">
+      <section id="recipe" class="section section-grid">
         <div class="container">
-          <h2 id="recipe" class="section-title-index">Lust auf was Neues?</h2>
+          <h2 class="section-title-index">Lust auf was Neues?</h2>
 
           <div class="cards">
             <a class="card" href="./Rezept Fabian.html">
