--- a/Kontakt Formular.html
+++ b/Kontakt Formular.html
@@ -1,202 +1,45 @@
-<style>
-  html,
-  body {
-    height: 100%;
-    margin: 0;
-  }
-
-  body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-    height: 120px;
-    box-shadow: 0 6px 10px -6px rgba(127, 127, 127, 0.876);
-  }
-
-  .header img {
-    width: auto;
-    height: 80px;
-    margin-bottom: 10px;
-    margin-left: 50px;
-  }
-
-  img {
-    height: 200px;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-
-  .menue {
-    display: flex;
-    justify-content: center;
-    gap: 45px;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    text-decoration: none;
-    color: rgb(4, 4, 4);
-    margin-right: 50px;
-  }
-
-  .menue a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-  }
-
-  .menue a:hover {
-    color: rgb(0, 128, 0);
-    text-decoration: underline;
-    text-underline-offset: 20px;
-    text-decoration-thickness: 5px;
-  }
-
-  .Kontaktformular {
-    background-color: #d3d3d3;
-    border-radius: 20px;
-    max-width: 400px;
-    margin: 100 auto;
-    /* mittig auf der Seite */
-    padding: 40px;
-    /* Abstand innen */
-  }
-
-  .kontact-us {
-    font-family: "Raleway", sans-serif;
-    font-size: 30px;
-    font-weight: 80;
-    margin: -20 0 24px 0;
-  }
-
-  .lable {
-    font-family: "Raleway", sans-serif;
-    font-weight: 5;
-    display: inline-block;
-    margin-bottom: 5px;
-    margin-top: 5px;
-  }
-
-  .input {
-    width: 380px;
-    border-radius: 5px;
-    border: none;
-    height: 30px;
-  }
-
-  .input-note {
-    width: 380px;
-    height: 180px;
-    border-radius: 5px;
-    border: none;
-    font-family: "Raleway", sans-serif;
-    font-size: 16px;
-    resize: none;
-  }
-
-  .submit {
-    font-family: "Raleway", sans-serif;
-    background-color: green;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    border: none;
-    height: 30px;
-    width: 150px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-  }
-
-  .site-footer {
-    background: #222;
-    color: #fff;
-    padding: 18px 0;
-  }
-
-  .footer-inner {
-    max-width: 1200px;
-    width: 100%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .footer-logo img {
-    height: clamp(52px, 6vw, 75px);
-    width: auto;
-    filter: invert(1) brightness(1.2);
-  }
-
-  .social {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
-
-  .social-btn {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 8px;
-    transition:
-      transform 0.15s ease,
-      opacity 0.15s ease;
-  }
-
-  .social-btn img {
-    height: clamp(26px, 4vw, 40px);
-    width: auto;
-    display: block;
-  }
-
-  /* Hover */
-  .social-btn:hover {
-    transform: translateY(-2px);
-    opacity: 0.9;
-  }
-  #successMsg {
-  color: green;
-  font-weight: 600;
-}
-</style>
-
 <!doctype html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kontaktformular</title>
+    <link rel="stylesheet" href="./style-Odilo.css" />
   </head>
 
   <body>
-    <header>
-      <div class="header">
-        <div>
-          <a href="index.html">
-            <img src="./img/logo.png" alt="Kochwelt Überschrift" />
-          </a>
-        </div>
+      <header class="site-header">
+          <div class="container header-inner">
+              <a class="brand" href="./index.html">
+                  <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
+              </a>
 
-        <div class="menue">
-          <a href="index.html">Start</a>
-          <a href="index.html">Rezept des Tages</a>
-          <a href="Kontakt Formular.html">Kontakt</a>
-          <a href="impressum.html">Impressum</a>
-        </div>
-      </div>
+              <button class="nav-toggle" id="navToggle" type="button">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+              </button>
 
-      <main>
+              <nav class="nav nav-desktop">
+                  <a class="nav-link" href="./index.html#">Start</a>
+                  <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
+                  <a class="nav-link is-active" href="./Kontakt Formular.html">Kontakt</a>
+                  <a class="nav-link" href="./impressum.html">Impressum</a>
+              </nav>
+          </div>
+          <div class="nav-overlay" id="navOverlay" hidden></div>
+
+          <nav class="nav-drawer" id="mobileMenu" hidden>
+              <a class="nav-link" href="./index.html#">Start</a>
+              <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
+              <a class="nav-link is-active" href="./Kontakt Formular.html">Kontakt</a>
+              <a class="nav-link" href="./impressum.html">Impressum</a>
+          </nav>
+      </header>
+
+      <main class="container">
         <div class="Kontaktformular">
-          <h3 class="kontact-us">Kontaktiere uns</h3>
+          <h3 class="contact-us">Kontaktiere uns</h3>
 
           <form id="contactForm">
             <label class="lable">Dein Name:</label><br />
@@ -211,10 +54,7 @@
             <input class="submit" type="submit" value="Abschicken" />
           </form>
 
-          <p
-            id="successMsg"
-            style="display: none; text-align: center; margin-top: 15px"
-          >
+          <p id="successMsg" class="success-message">
             Nachricht wurde abgeschickt
           </p>
         </div>
@@ -248,6 +88,67 @@
       </div>
     </footer>
     <script>
+
+      const navToggle = document.getElementById("navToggle");
+      const navOverlay = document.getElementById("navOverlay");
+      const mobileMenu = document.getElementById("mobileMenu");
+
+      function openMenu() {
+        if (!navToggle || !navOverlay || !mobileMenu) return;
+
+        navToggle.classList.add("is-open");
+        navOverlay.classList.add("is-open");
+        mobileMenu.classList.add("is-open");
+
+        navOverlay.hidden = false;
+        mobileMenu.hidden = false;
+
+        //scroll lock site background
+        document.body.style.overflow = "hidden";
+      }
+
+      function closeMenu() {
+        if (!navToggle || !navOverlay || !mobileMenu) return;
+
+        navToggle.classList.remove("is-open");
+        navOverlay.classList.remove("is-open");
+        mobileMenu.classList.remove("is-open");
+
+        //scroll unlock site background
+        document.body.style.overflow = "";
+
+        //wait for animation end then hide elements
+        setTimeout(() => {
+          navOverlay.hidden = true;
+          mobileMenu.hidden = true;
+        }, 125);
+      }
+
+      function toggleMenu() {
+        const isOpen = navToggle.classList.contains("is-open");
+        if (isOpen) {
+          closeMenu();
+        } else {
+          openMenu();
+        }
+      }
+
+      if (navToggle && navOverlay && mobileMenu) {
+        navToggle.addEventListener("click", toggleMenu);
+        navOverlay.addEventListener("click", closeMenu);
+
+        //ESC key closes menu
+        document.addEventListener("keydown", (e) => {
+          if (e.key === "Escape" && navToggle.classList.contains("is-open")) {
+            closeMenu();
+          }
+        });
+        
+        //clicking a link in the mobile menu closes the menu
+        mobileMenu.querySelectorAll(".nav-link").forEach((link) => {
+          link.addEventListener("click", closeMenu);
+        });
+      }
       var form = document.getElementById("contactForm");
       var msg = document.getElementById("successMsg");
 
