--- a/Kontakt Formular.html
+++ b/Kontakt Formular.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kontaktformular</title>
     <link rel="stylesheet" href="./style-Odilo.css" />
+    <link rel="icon" href="./img/logo_small.png">
   </head>
 
   <body>
