--- a/Kontakt Formular.html
+++ b/Kontakt Formular.html
@@ -9,156 +9,154 @@
   </head>
 
   <body>
-      <header class="site-header">
-          <div class="container header-inner">
-              <a class="brand" href="./index.html">
-                  <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
-              </a>
+    
+    <header class="site-header">
+      <div class="container header-inner">
+        <a class="brand" href="./index.html">
+          <span class="web-logo">
+            <img class="web-logo img" src="./logo.png" alt="Logo">
+          </span>
+        </a>
 
-              <button class="nav-toggle" id="navToggle" type="button">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-              </button>
+        <button class="nav-toggle" id="navToggle" type="button">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
-              <nav class="nav nav-desktop">
-                  <a class="nav-link" href="./index.html#">Start</a>
-                  <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
-                  <a class="nav-link is-active" href="./Kontakt Formular.html">Kontakt</a>
-                  <a class="nav-link" href="./impressum.html">Impressum</a>
-              </nav>
-          </div>
-          <div class="nav-overlay" id="navOverlay" hidden></div>
+        <nav class="nav nav-desktop">
+          <a class="nav-link" href="./index.html#">Start</a>
+          <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
+          <a class="nav-link is-active" href="./Kontakt Formular.html">Kontakt</a>
+          <a class="nav-link" href="./impressum.html">Impressum</a>
+        </nav>
+      </div>
 
-          <nav class="nav-drawer" id="mobileMenu" hidden>
-              <a class="nav-link" href="./index.html#">Start</a>
-              <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
-              <a class="nav-link is-active" href="./Kontakt Formular.html">Kontakt</a>
-              <a class="nav-link" href="./impressum.html">Impressum</a>
-          </nav>
-      </header>
+      <div class="nav-overlay" id="navOverlay" hidden></div>
 
-      <main class="container">
-        <div class="Kontaktformular">
-          <h3 class="contact-us">Kontaktiere uns</h3>
-
-          <form id="contactForm">
-            <label class="lable">Dein Name:</label><br />
-            <input class="input" type="text" id="name" required /><br />
-
-            <label class="lable">Deine E-Mail:</label><br />
-            <input class="input" type="email" id="email" required /><br /><br />
-
-            <label class="lable">Deine Nachricht:</label><br />
-            <textarea class="input-note" id="message" required></textarea>
-
-            <input class="submit" type="submit" value="Abschicken" />
-          </form>
-
-          <p id="successMsg" class="success-message">
-            Nachricht wurde abgeschickt
-          </p>
-        </div>
-      </main>
+      <nav class="nav-drawer" id="mobileMenu" hidden>
+        <a class="nav-link" href="./index.html#">Start</a>
+        <a class="nav-link" href="./index.html#recipe">Rezept des Tages</a>
+        <a class="nav-link is-active" href="./Kontakt Formular.html">Kontakt</a>
+        <a class="nav-link" href="./impressum.html">Impressum</a>
+      </nav>
     </header>
+
+    <main class="container">
+      <div class="Kontaktformular">
+        <h3 class="contact-us">Kontaktiere uns</h3>
+
+        <form
+          id="contactForm"
+          action="https://formspree.io/f/xnjpnpyy"
+          method="POST"
+        >
+          <label class="lable">Dein Name:</label><br />
+          <input class="input" type="text" name="name" required /><br />
+
+          <label class="lable">Deine E-Mail:</label><br />
+          <input class="input" type="email" name="email" required /><br /><br />
+
+          <label class="lable">Deine Nachricht:</label><br />
+          <textarea class="input-note" name="message" required></textarea>
+
+          <input class="submit" type="submit" value="Abschicken" />
+        </form>
+
+        <p id="successMsg" class="success-message" style="display:none;">
+          Nachricht wurde abgeschickt
+        </p>
+      </div>
+    </main>
+
     <footer class="site-footer">
       <div class="container footer-inner">
         <a class="footer-logo" href="./index.html">
-          <img src="./img/logo.png" alt="Logo"
-        /></a>
+          <img src="./img/logo.png" alt="Logo">
+        </a>
 
         <div class="container social">
           <a class="social-btn fb" href="https://www.facebook.com/">
-            <span class="social-icon"
-              ><img src="./fb.png" alt="facebook"
-            /></span>
+            <span class="social-icon">
+              <img src="./fb.png" alt="facebook">
+            </span>
           </a>
 
           <a class="social-btn ig" href="https://www.instagram.com/">
-            <span class="social-icon"
-              ><img src="./ig.png" alt="instagram"
-            /></span>
+            <span class="social-icon">
+              <img src="./ig.png" alt="instagram">
+            </span>
           </a>
 
           <a class="social-btn tw" href="https://x.com/">
-            <span class="social-icon"
-              ><img src="./twitter.png" alt="twitter"
-            /></span>
+            <span class="social-icon">
+              <img src="./twitter.png" alt="twitter">
+            </span>
           </a>
         </div>
       </div>
     </footer>
-    <script>
 
+    <script>
       const navToggle = document.getElementById("navToggle");
       const navOverlay = document.getElementById("navOverlay");
       const mobileMenu = document.getElementById("mobileMenu");
 
       function openMenu() {
-        if (!navToggle || !navOverlay || !mobileMenu) return;
-
         navToggle.classList.add("is-open");
         navOverlay.classList.add("is-open");
         mobileMenu.classList.add("is-open");
-
         navOverlay.hidden = false;
         mobileMenu.hidden = false;
-
-        //scroll lock site background
         document.body.style.overflow = "hidden";
       }
 
       function closeMenu() {
-        if (!navToggle || !navOverlay || !mobileMenu) return;
-
         navToggle.classList.remove("is-open");
         navOverlay.classList.remove("is-open");
         mobileMenu.classList.remove("is-open");
-
-        //scroll unlock site background
         document.body.style.overflow = "";
-
-        //wait for animation end then hide elements
-        setTimeout(() => {
+        setTimeout(function () {
           navOverlay.hidden = true;
           mobileMenu.hidden = true;
         }, 125);
       }
 
-      function toggleMenu() {
-        const isOpen = navToggle.classList.contains("is-open");
-        if (isOpen) {
-          closeMenu();
-        } else {
-          openMenu();
-        }
-      }
+      navToggle.onclick = function () {
+        if (mobileMenu.classList.contains("is-open")) closeMenu();
+        else openMenu();
+      };
 
-      if (navToggle && navOverlay && mobileMenu) {
-        navToggle.addEventListener("click", toggleMenu);
-        navOverlay.addEventListener("click", closeMenu);
+      navOverlay.onclick = closeMenu;
 
-        //ESC key closes menu
-        document.addEventListener("keydown", (e) => {
-          if (e.key === "Escape" && navToggle.classList.contains("is-open")) {
-            closeMenu();
-          }
-        });
-        
-        //clicking a link in the mobile menu closes the menu
-        mobileMenu.querySelectorAll(".nav-link").forEach((link) => {
-          link.addEventListener("click", closeMenu);
-        });
-      }
+      document.onkeydown = function (e) {
+        if (e.key === "Escape") closeMenu();
+      };
+
+      mobileMenu.querySelectorAll(".nav-link").forEach(function (link) {
+        link.onclick = closeMenu;
+      });
+
       var form = document.getElementById("contactForm");
       var msg = document.getElementById("successMsg");
 
       form.onsubmit = function (e) {
         e.preventDefault();
 
-        msg.style.display = "block";
-        form.reset();
+        fetch(form.action, {
+          method: "POST",
+          body: new FormData(form),
+          headers: {
+            "Accept": "application/json"
+          }
+        }).then(function (response) {
+          if (response.ok) {
+            msg.style.display = "block";
+            form.reset();
+          }
+        });
       };
     </script>
+
   </body>
 </html>
