--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 </head>
 <body>
   <header class="site-header">
-        <div class="container header-inner">
-             <a class="brand" href="./index.html">
-                <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
-            </a>
+    <div class="container header-inner">
+         <a class="brand" href="./index.html">
+            <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
+        </a>
 
-            <button class="nav-toggle" id="navToggle" type="button">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
+        <button class="nav-toggle" id="navToggle" type="button" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
 
-            <nav class="nav nav-desktop">
-                <a class="nav-link is-active" href="./index.html#">Start</a>
-                <a class="nav-link" href="#recipe">Rezept des Tages</a>
-                <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
-                <a class="nav-link" href="./impressum.html">Impressum</a>
-            </nav>
-        </div>
-        <div class="nav-overlay" id="navOverlay" hidden></div>
-
-        <nav class="nav-drawer" id="mobileMenu" hidden>
+        <nav class="nav nav-desktop">
             <a class="nav-link is-active" href="./index.html#">Start</a>
             <a class="nav-link" href="#recipe">Rezept des Tages</a>
             <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link" href="./impressum.html">Impressum</a>
         </nav>
+    </div>
+    <div class="nav-overlay" id="navOverlay" onclick="closeMenu()" hidden></div>
+
+    <nav class="nav-drawer" id="mobileMenu" hidden>
+        <a class="nav-link is-active" href="./index.html#">Start</a>
+        <a class="nav-link" href="#recipe">Rezept des Tages</a>
+        <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
+        <a class="nav-link" href="./impressum.html">Impressum</a>
+    </nav>
   </header>
   <main>
       <section class="section section-hero">
