--- a/Rezept-Felix.html
+++ b/Rezept-Felix.html
@@ -70,7 +70,7 @@
                 <li data-menge="250" data-einheit="g" data-name="Mehl" style="background-color: #eee;">250 g Mehl (glatt)</li>
                 <li data-menge="60" data-einheit="ml" data-name="Öl">60 ml Öl</li>
                 <li data-menge="1" data-einheit="TL" data-name="Essig" style="background-color: #eee;">1 TL Essig</li>
-                <li data-menge="1" data-einheit="TL" data-name="Salz">1/4 TL Salz</li>
+                <li data-menge="1" data-einheit="TL" data-name="Salz">1 TL Salz</li>
                 <li data-menge="125" data-einheit="ml" data-name="Wasser" style="background-color: #eee;">125 ml Wasser
                 </li>
                 <h3>Zutaten für die Füllung</h3>
